--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "email-tags",
   "version": "0.1.0",
-  "main": "./src/index.js",
+  "main": "./lib/index.js",
   "dependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.12.13",
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel-preset-react": "^6.24.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
@@ -17,10 +21,7 @@
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": {
-    "name": "Malay",
-    "email": "hi.malay879@gmail.com"
-  },
+  "author": "Malay <hi.malay879@gmail.com>",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,10 +40,20 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "webpack-cli": "^3.3.12"
-  }
+  },
+  "description": "## npm i email-tags",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hi-malay/email-tags.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hi-malay/email-tags/issues"
+  },
+  "homepage": "https://github.com/hi-malay/email-tags#readme"
 }
